--- a/app/app/src/main/res/values/colors.xml
+++ b/app/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#10D8B8</color>
+    <color name="colorPrimaryDark">#6310d8</color>
+    <color name="colorAccent">#d83b10</color>
+    <color name="colorSecondAccent">#d89f10</color>
+    <color name="white">#FBFBFB</color>
+    <color name="black">#242424</color>
 </resources>
