--- a/app/app/src/main/res/layout/activity_log_in_google.xml
+++ b/app/app/src/main/res/layout/activity_log_in_google.xml
@@ -30,4 +30,15 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Insumos"
+        android:id="@+id/gotoinsumos"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="60dp"
+        />
+
 </android.support.constraint.ConstraintLayout>
