--- a/app/app/src/main/res/layout/activity_checklist_detail.xml
+++ b/app/app/src/main/res/layout/activity_checklist_detail.xml
@@ -11,5 +11,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/recycler_checklist_detail"/>
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Ver próxima fecha de compra"
+        android:id="@+id/button_proxima_compra"/>
 
 </android.support.constraint.ConstraintLayout>
