ultimos cambios de estilo

--- a/app/app/src/main/res/layout/activity_checklist_buy_date.xml
+++ b/app/app/src/main/res/layout/activity_checklist_buy_date.xml
@@ -5,11 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChecklistBuyDateActivity">
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/fecha_proxima_compra"
-        android:text="Próxima fecha"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <DatePicker
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:datePickerMode="calendar"
+            android:id="@+id/fecha_compra_picker"/>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
