--- a/app/app/src/main/res/layout/activity_checklist.xml
+++ b/app/app/src/main/res/layout/activity_checklist.xml
@@ -7,7 +7,7 @@
     tools:context=".ChecklistActivity">
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="506dp"
         android:id="@+id/recycler_checklist"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
