--- a/app/app/src/main/res/layout/activity_insumo.xml
+++ b/app/app/src/main/res/layout/activity_insumo.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="506dp"
         android:id="@+id/recycler_insumo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
