--- a/app/app/src/main/res/layout/checklist_insumo_row.xml
+++ b/app/app/src/main/res/layout/checklist_insumo_row.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="wrap_content">
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -21,4 +16,4 @@
             android:inputType="numberDecimal"
             android:id="@+id/cantidad_insumo_editar"/>
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
