--- a/app/app/src/main/res/layout/activity_crear_insumo.xml
+++ b/app/app/src/main/res/layout/activity_crear_insumo.xml
@@ -104,6 +104,17 @@
                     android:layout_height="wrap_content"
                     />
                 <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Subir foto"
+                    android:id="@+id/photo_button"
+                    />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/photo_insumo"
+                    />
+                <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Guardar"
