--- a/app/app/src/main/res/layout/activity_insumo_detail.xml
+++ b/app/app/src/main/res/layout/activity_insumo_detail.xml
@@ -110,6 +110,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/photo_insumo_editar"/>
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
