--- a/app/app/src/main/res/layout/insumo_row.xml
+++ b/app/app/src/main/res/layout/insumo_row.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <Button
@@ -7,4 +7,4 @@
         android:layout_height="wrap_content"
         android:text="Insumo goes here"
         android:id="@+id/insumo_button"/>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
