--- a/app/app/src/main/res/layout/place_element.xml
+++ b/app/app/src/main/res/layout/place_element.xml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="2dp"
+        android:background="#00FFFFFF"
+        android:backgroundTint="#00FFFFFF"
         android:padding="8dp">
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
             android:id="@+id/image"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/ic_photo_camera_black"/>
+            android:contentDescription="@string/place_image_content_desc"
+            android:src="@drawable/ic_photo_camera_black" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/nombre"
-            android:text="Nombre"
-            android:layout_toEndOf="@id/image"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            android:textStyle="bold"/>
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/image"
+            android:text="@string/place_name"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/quantity"
-            android:text="Quantity: "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/nombre"
-            android:layout_toEndOf="@id/image"/>
+            android:layout_toEndOf="@id/image"
+            android:text="@string/quatintity_place"
+            android:textSize="18sp" />
 
     </RelativeLayout>
 
