Estilo y correccion crear insumo

--- a/app/app/src/main/res/layout/activity_checklist_buy_date.xml
+++ b/app/app/src/main/res/layout/activity_checklist_buy_date.xml
@@ -5,11 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChecklistBuyDateActivity">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical"
+        android:layout_marginTop="60dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Fecha sugerida de compra"
+            android:textSize="40dp"
+            android:textAlignment="center"/>
         <DatePicker
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
