--- a/app/app/src/main/res/layout/activity_checklist.xml
+++ b/app/app/src/main/res/layout/activity_checklist.xml
@@ -5,10 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChecklistActivity">
-    <android.support.v7.widget.RecyclerView
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="506dp"
-        android:id="@+id/recycler_checklist"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="40dp"
+            android:text="Checklists"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:layout_marginTop="60dp"
+            />
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="506dp"
+            android:id="@+id/recycler_checklist"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
