--- a/app/app/src/main/res/layout/activity_checklist_detail.xml
+++ b/app/app/src/main/res/layout/activity_checklist_detail.xml
@@ -5,11 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChecklistDetailActivity">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="506dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="60dp"
         android:id="@+id/recycler_checklist_detail"/>
     <Button
         android:layout_height="wrap_content"
@@ -17,6 +21,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="Ver próxima fecha de compra"
+        android:layout_marginBottom="5dp"
+        android:background="@color/colorPrimary"
         android:id="@+id/button_proxima_compra"/>
 
 </android.support.constraint.ConstraintLayout>
