--- a/app/app/src/main/res/layout/activity_home.xml
+++ b/app/app/src/main/res/layout/activity_home.xml
@@ -25,18 +25,23 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Checklists"
             android:id="@+id/gotochecklist"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="95dp"
+            android:textSize="18dp"
+            android:background="@color/colorPrimary"
             />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:layout_marginTop="5dp"
             android:text="Insumos"
             android:id="@+id/gotoinsumos"
+            android:background="@color/colorPrimary"
             />
 
         <TextView
