--- a/app/app/src/main/res/layout/checklist_insumo_row.xml
+++ b/app/app/src/main/res/layout/checklist_insumo_row.xml
@@ -3,17 +3,30 @@
     android:layout_width="match_parent" android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Este es un checkbox"
+            android:textSize="18dp"
             android:id="@+id/checked_box" />
-        <EditText
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:digits="0123456789."
-            android:inputType="numberDecimal"
-            android:id="@+id/cantidad_insumo_editar"/>
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:layout_marginLeft="10dp"
+                android:text="Cantidad: "/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:digits="0123456789."
+                android:inputType="numberDecimal"
+                android:id="@+id/cantidad_insumo_editar"/>
+        </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
