--- a/app/app/src/main/res/layout/checklist_row.xml
+++ b/app/app/src/main/res/layout/checklist_row.xml
@@ -4,6 +4,10 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/checkrow"/>
+        android:background="@color/colorSecondAccent"
+        android:shadowColor="@color/black"
+        android:id="@+id/checkrow"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"/>
 
 </android.support.v7.widget.CardView>
