--- a/app/app/src/main/res/layout/insumo_row.xml
+++ b/app/app/src/main/res/layout/insumo_row.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content">
-
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Insumo goes here"
-        android:id="@+id/insumo_button"/>
+        android:background="@color/colorSecondAccent"
+        android:textSize="15dp"
+        android:id="@+id/insumo_button"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"/>
 </android.support.v7.widget.CardView>
