--- a/app/app/src/main/res/layout/activity_checklist.xml
+++ b/app/app/src/main/res/layout/activity_checklist.xml
@@ -20,7 +20,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="40dp"
+            android:textSize="40sp"
             android:text="Checklists"
             android:textAlignment="center"
             android:textColor="@color/black"
