--- a/app/app/src/main/res/layout/activity_insumo.xml
+++ b/app/app/src/main/res/layout/activity_insumo.xml
@@ -8,70 +8,83 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="60dp"
-        android:orientation="vertical">
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="40dp"
             android:text="Insumos"
-            />
+            android:textAlignment="center"
+            android:textSize="40sp" />
+
         <Button
+            android:id="@+id/crear_insumo"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Crear insumo"
             android:background="@color/colorPrimary"
-            android:id="@+id/crear_insumo"/>
+            android:text="Crear insumo" />
+
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_insumo"
             android:layout_width="match_parent"
-            android:layout_height="380dp"
-            android:id="@+id/recycler_insumo"/>
+            android:layout_height="427dp" />
+
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <Button
+                android:id="@+id/orden_prioridad"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="177dp"
                 android:layout_height="wrap_content"
-                android:text="Ordenar por prioridad"
                 android:background="@color/colorPrimaryDark"
-                android:textColor="@color/white"
-                android:layout_marginLeft="5dp"
-                android:id="@+id/orden_prioridad"/>
+                android:text="Ordenar por prioridad"
+                android:textColor="@color/white" />
+
             <Button
+                android:id="@+id/orden_categoria"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="Organizar por categoría"
+                android:layout_marginStart="5dp"
                 android:background="@color/colorPrimaryDark"
-                android:layout_marginLeft="5dp"
-                android:textColor="@color/white"
-                android:id="@+id/orden_categoria"/>
+                android:text="Organizar por categoría"
+                android:textColor="@color/white" />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp">
+
             <Button
+                android:id="@+id/orden_cantidad"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="177dp"
                 android:layout_height="wrap_content"
-                android:text="Ordenar por cantidad"
                 android:background="@color/colorPrimaryDark"
-                android:textColor="@color/white"
-                android:layout_marginLeft="5dp"
-                android:id="@+id/orden_cantidad"/>
+                android:text="Ordenar por cantidad"
+                android:textColor="@color/white" />
+
             <Button
+                android:id="@+id/orden_caducidad"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="187dp"
                 android:layout_height="wrap_content"
-                android:text="Ordenar por caducidad"
+                android:layout_marginStart="5dp"
                 android:background="@color/colorPrimaryDark"
-                android:layout_marginLeft="5dp"
-                android:textColor="@color/white"
-                android:id="@+id/orden_caducidad"/>
+                android:text="Ordenar por caducidad"
+                android:textColor="@color/white" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
